# SafeDrop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCP_AGENT_GUIDE.md  README.md  REAL_DEVICE_TESTING.md  SPEC.md  bench.py  pyproject.toml  requirements.txt  run.py  spec.md
.github/workflows/: release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/safedrop/android/: MainActivity.kt  SafeDropApplication.kt
android/app/src/main/java/com/safedrop/android/crypto/: Fernet.kt  Hkdf.kt  Identity.kt  Session.kt
android/app/src/main/java/com/safedrop/android/data/: SafeDropService.kt  TrustStore.kt
android/app/src/main/java/com/safedrop/android/net/: Discovery.kt  Protocol.kt  ToolRegistry.kt  TransferManager.kt
android/app/src/main/java/com/safedrop/android/photo/: PhotoCapturer.kt
android/app/src/main/java/com/safedrop/android/ui/: Format.kt  HomeScreen.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
docs/: demo-recipes.md  index.html  landing.html  pitch.md
ios/: DISTRIBUTION.md  project.yml
ios/SafeDrop/: App.swift  Crypto.swift  Net.swift  Photo.swift  Service.swift  TokenAdminView.swift  Tools.swift  TransferManager.swift  Trust.swift
ios/scripts/: build-ipa.sh
safedrop/: __init__.py  __main__.py  agent.py  cli.py  config.py  crypto.py  discovery.py  gui.py  handoff.py  headless.py  notifications.py  protocol.py  tailscale.py  tools.py  transfer.py  trust.py
safedrop_mcp/: __init__.py  __main__.py  agent_bus.py  agent_identity.py  bridge.py  bridges.example.json  handoff_tools.py  http_server.py  notification_tools.py  policy.py  rendezvous.py  server.py  token_tools.py  tokens.py  tokens_cli.py
scripts/: com.safedrop.agent.plist  install.ps1  install.sh  release.sh  safedrop-agent.service
tests/: test_agent.py  test_agent_bus.py  test_android_interop.py  test_android_tools_interop.py  test_beacon.py  test_discovery.py  test_dynamic_tools.py  test_e2e.py  test_handoff_tokens_notify.py  test_http_transport.py  test_mcp.py  test_mcp_protocol.py  test_policy_tokens.py  test_tailscale.py  test_tools.py  test_trust.py
