[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safedrop"
version = "1.1.0"
description = "Secure zero-config LAN file & clipboard sharing — Python desktop, CLI, MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CNL Group 5" },
]
dependencies = [
    "cryptography>=42",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.scripts]
safedrop = "safedrop.cli:main"
safedrop-mcp = "safedrop_mcp.server:run"
safedrop-mcp-tokens = "safedrop_mcp.tokens_cli:main"

[tool.setuptools]
packages = ["safedrop", "safedrop_mcp"]
