[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safedrop"
version = "1.6.0"
description = "Secure zero-config LAN file & clipboard sharing — with a built-in cross-device MCP fabric for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SafeDrop contributors" },
]
keywords = ["lan", "p2p", "filesharing", "mcp", "ai-agents", "clipboard", "airdrop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=42",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
agent = [
    "anthropic>=0.40",
]

[project.scripts]
safedrop = "safedrop.cli:main"
safedrop-mcp = "safedrop_mcp.server:run"
safedrop-mcp-tokens = "safedrop_mcp.tokens_cli:main"
safedrop-agent = "safedrop.agent:run"
safedrop-beacon = "safedrop_mcp.rendezvous:run"

[project.urls]
Repository = "https://github.com/gclinian/SafeDrop"
Issues = "https://github.com/gclinian/SafeDrop/issues"
Changelog = "https://github.com/gclinian/SafeDrop/blob/main/CHANGELOG.md"
Documentation = "https://github.com/gclinian/SafeDrop/blob/main/MCP_AGENT_GUIDE.md"

[tool.setuptools]
packages = ["safedrop", "safedrop_mcp"]
